# SimpleLogger

./: CMakeLists.txt
Logger/: CMakeLists.txt  Logger.hpp
Main/: CMakeLists.txt  main.cpp
